namespace NurFlac.DuplicateChecking.Models;

public sealed record AudioFingerprint(string Value, string ProviderName);
